--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,8 @@
 section{
     &.meun{
         margin-top: 50px;
+        width: 90%;
+        margin: 50px auto;
         h1{
             font-size: 35px;
             text-transform: capitalize;
@@ -8,14 +10,56 @@ section{
         }
         .meun-card{
             margin-top: 50px;
+           
+          
+            @media (max-width:768px) and (min-width:99px){
+                
+            //    margin: 50px auto;
+               
+             } 
+          
+                  
+              @media (max-width:767px){
+                display: block;
+                // margin: 50px 30px;
             
+              }
+              .one{
+              float: left;
+              width: 30% ;
+              @media (max-width:768px) and (min-width:99px){
+                
+                width: 40%;
+                
+               
+             } 
+              
+              }
+              .two{
+               float: left ;
+               width: 30% ;
+               @media (max-width:768px) and (min-width:99px){
+              
+                width: 40%;
+                
+               
+             } 
+              }
+              .three{
+              float: right;
+              width: 30% ;
+              @media (max-width:768px) and (min-width:99px){
+                  float: left;
+                  width: 86%;
+                 
+               } }
+         
             .card{
                 border: none;
+             
+                margin: 10px 20px ;
+           
                 
-              
-                @media (max-width:991px){
-                     margin-top:10px
-                }
               
                .card-body{
                 background-color: #999;
